#include "lobby_scene_handler.h"
#include "src/game_logic/thread_local/thread_local_storage.h"
#include "src/network/message_system.h"

///<<< BEGIN WRITING YOUR CODE
///<<< END WRITING YOUR CODE
void LobbyServiceHandler::StartCrossGs(::google::protobuf::RpcController* controller,
	const ::StartCrossGsRequest* request,
	::StartCrossGsResponse* response,
	 ::google::protobuf::Closure* done)
{
///<<< BEGIN WRITING YOUR CODE
///<<< END WRITING YOUR CODE
}
